<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_magazine"
            android:icon="@drawable/ic_magazine"
            android:title="@string/revista" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_twitter"
            android:title="@string/twitter" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="@string/facebook" />
        <item
            android:id="@+id/nav_us"
            android:icon="@mipmap/ic_us"
            android:title="@string/nosotros" />
    </group>
</menu>
